@@ -136,11 +136,11 @@ TextTrack::~TextTrack()
             m_client->textTrackRemoveCues(this, m_cues.get());
 
         for (size_t i = 0; i < m_cues->length(); ++i)
-            m_cues->item(i)->setTrack(0);
-        if (m_regions) {
-            for (size_t i = 0; i < m_regions->length(); ++i)
-                m_regions->item(i)->setTrack(0);
-        }
+            m_cues->item(i)->setTrack(nullptr);
+    }
+    if (m_regions) {
+        for (size_t i = 0; i < m_regions->length(); ++i)
+            m_regions->item(i)->setTrack(nullptr);
     }
     clearClient();
 }
